compiler/src/parser/snapshots/narwhal__parser__tests__signature#0.snap
---
source: src/parser/tests.rs
description: "fn f(x: Int) -> Int"
---
Signature@0..19
  FnKw@0..2 "fn"
  Whitespace@2..3 " "
  Ident@3..4 "f"
  LeftParen@4..5 "("
  ParamList@5..11
    Ident@5..6 "x"
    Colon@6..7 ":"
    Path@7..11
      PathComponent@7..11
        Whitespace@7..8 " "
        Ident@8..11 "Int"
  RightParen@11..12 ")"
  Whitespace@12..13 " "
  Arrow@13..15 "->"
  Path@15..19
    PathComponent@15..19
      Whitespace@15..16 " "
      Ident@16..19 "Int"
