compiler/src/parser/snapshots/narwhal__parser__tests__stmt#2.snap
---
source: src/parser/tests.rs
description: break;
---
StmtBreak@0..6
  BreakKw@0..5 "break"
  Semicolon@5..6 ";"
