compiler/src/parser/snapshots/narwhal__parser__tests__stmt#3.snap
---
source: src/parser/tests.rs
description: continue;
---
StmtContinue@0..9
  ContinueKw@0..8 "continue"
  Semicolon@8..9 ";"
