compiler/src/parser/snapshots/narwhal__parser__tests__stmt#4.snap
---
source: src/parser/tests.rs
description: return;
---
StmtReturn@0..7
  ReturnKw@0..6 "return"
  Semicolon@6..7 ";"
