compiler/src/parser/snapshots/narwhal__parser__tests__stmt_let#1.snap
---
source: src/parser/tests.rs
description: "let x = 5 : Int;"
---
StmtLet@0..16
  LetKw@0..3 "let"
  Whitespace@3..4 " "
  Ident@4..5 "x"
  Whitespace@5..6 " "
  Equals@6..7 "="
  Whitespace@7..8 " "
  Int@8..9 "5"
  TypeAscription@9..15
    Whitespace@9..10 " "
    Colon@10..11 ":"
    Path@11..15
      PathComponent@11..15
        Whitespace@11..12 " "
        Ident@12..15 "Int"
  Semicolon@15..16 ";"
