compiler/src/parser/snapshots/narwhal__parser__tests__stmt_loop#0.snap
---
source: src/parser/tests.rs
description: "loop { continue; }"
---
StmtLoop@0..18
  LoopKw@0..4 "loop"
  Block@4..18
    Whitespace@4..5 " "
    LeftBrace@5..6 "{"
    StmtContinue@6..16
      Whitespace@6..7 " "
      ContinueKw@7..15 "continue"
      Semicolon@15..16 ";"
    Whitespace@16..17 " "
    RightBrace@17..18 "}"
